{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 28,
  "lineage": "1605449e-b46b-6dd7-6110-4a5e5914c6c8",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-control-plane-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:security-group/sg-000fd72cc88985cc4",
            "description": "EKS Control Plane security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082585085e3ae76a2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-000fd72cc88985cc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082585085e3ae76a2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod",
            "name_prefix": "",
            "owner_id": "037139663933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "prod-eks-control-plan-sg",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-eks-control-plan-sg",
              "Project": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:security-group/sg-082585085e3ae76a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082585085e3ae76a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000fd72cc88985cc4"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240824051915096400000001",
            "name_prefix": "terraform-",
            "owner_id": "037139663933",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "prod-eks-worker-sg",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-eks-worker-sg",
              "Project": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_to_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1454630982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000fd72cc88985cc4",
            "security_group_rule_id": "sgr-0599844bc48db2284",
            "self": false,
            "source_security_group_id": "sg-082585085e3ae76a2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.eks-control-plane-sg",
            "module.security_group.aws_security_group.eks-worker-sg",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1999105119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-082585085e3ae76a2",
            "security_group_rule_id": "sgr-026a31295a3dac01e",
            "self": false,
            "source_security_group_id": "sg-082585085e3ae76a2",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.eks-worker-sg",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2522918356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-082585085e3ae76a2",
            "security_group_rule_id": "sgr-0ade10bf7e237e8fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.eks-worker-sg",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1025,
            "id": "sgrule-3000761959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082585085e3ae76a2",
            "security_group_rule_id": "sgr-06fbb4e88682e7975",
            "self": false,
            "source_security_group_id": "sg-000fd72cc88985cc4",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.eks-control-plane-sg",
            "module.security_group.aws_security_group.eks-worker-sg",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_to_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-634934706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000fd72cc88985cc4",
            "security_group_rule_id": "sgr-02109f36ad3294939",
            "self": false,
            "source_security_group_id": "sg-082585085e3ae76a2",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.eks-control-plane-sg",
            "module.security_group.aws_security_group.eks-worker-sg",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058033a49dfc4a3b7",
            "arn": "arn:aws:ec2:ap-south-1:037139663933:elastic-ip/eipalloc-058033a49dfc4a3b7",
            "association_id": "eipassoc-0f50f9b59ec7047a5",
            "domain": "vpc",
            "id": "eipalloc-058033a49dfc4a3b7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-085b5f232d6816b32",
            "private_dns": "ip-10-0-1-93.ap-south-1.compute.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-3-7-152-254.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.152.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:internet-gateway/igw-00991ab8c7a5475ba",
            "id": "igw-00991ab8c7a5475ba",
            "owner_id": "037139663933",
            "tags": {
              "Environment": "production",
              "Name": "prod-igw",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-igw",
              "Project": "my-eks-cluster"
            },
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058033a49dfc4a3b7",
            "association_id": "eipassoc-0f50f9b59ec7047a5",
            "connectivity_type": "public",
            "id": "nat-0029c50d320832104",
            "network_interface_id": "eni-085b5f232d6816b32",
            "private_ip": "10.0.1.93",
            "public_ip": "3.7.152.254",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0772bd2c4885a4ed2",
            "tags": {
              "Environment": "production",
              "Name": "prod-nat",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-nat",
              "Project": "my-eks-cluster"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:route-table/rtb-0901177b4a4910867",
            "id": "rtb-0901177b4a4910867",
            "owner_id": "037139663933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0029c50d320832104",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "prod-private-rt",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-private-rt",
              "Project": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.eks-vpc",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:route-table/rtb-0c97819775f7fa268",
            "id": "rtb-0c97819775f7fa268",
            "owner_id": "037139663933",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00991ab8c7a5475ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "prod-public-rt",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-public-rt",
              "Project": "my-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.eks-vpc",
            "module.vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06228d222fb13f44b",
            "route_table_id": "rtb-0901177b4a4910867",
            "subnet_id": "subnet-0f2fd595822269e46"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.eks-vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61bdd4ed418be7c",
            "route_table_id": "rtb-0901177b4a4910867",
            "subnet_id": "subnet-0ca338a7bbd581def"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.eks-vpc",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d39b2a0aae0c089",
            "route_table_id": "rtb-0c97819775f7fa268",
            "subnet_id": "subnet-0772bd2c4885a4ed2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.eks-vpc",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e472420019a351c",
            "route_table_id": "rtb-0c97819775f7fa268",
            "subnet_id": "subnet-0a61c3eba4ef76173"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.eks-vpc",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:subnet/subnet-0f2fd595822269e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2fd595822269e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037139663933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-private-1",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-private-1",
              "Project": "my-eks-cluster"
            },
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:subnet/subnet-0ca338a7bbd581def",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca338a7bbd581def",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "037139663933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-private-2",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-private-2",
              "Project": "my-eks-cluster"
            },
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:subnet/subnet-0772bd2c4885a4ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0772bd2c4885a4ed2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037139663933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-public-1",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-public-1",
              "Project": "my-eks-cluster"
            },
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:subnet/subnet-0a61c3eba4ef76173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a61c3eba4ef76173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "037139663933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-public-2",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-public-2",
              "Project": "my-eks-cluster"
            },
            "vpc_id": "vpc-094849f6f606a8b8a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:037139663933:vpc/vpc-094849f6f606a8b8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbeab3225154f730",
            "default_route_table_id": "rtb-02131b9db7ad9d46f",
            "default_security_group_id": "sg-02ec62fbb565ceb6c",
            "dhcp_options_id": "dopt-07f8d3e46d32ed06c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094849f6f606a8b8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02131b9db7ad9d46f",
            "owner_id": "037139663933",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc",
              "Project": "my-eks-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc",
              "Project": "my-eks-cluster"
            }
          }
        }
      ]
    }
  ]
}